--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 	<!DOCTYPE html>
 <html>
 <head>
-	<title>INDEX PÁGINA </title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<title>ADMV-Agencia de desarrollo web</title>
+	<link rel="stylesheet" type="text/css" href="style-index.css">
 	<!--<link rel="stylesheet" type="text/css" href="stylemenu.css">-->
 	<!--<link rel="stylesheet" type="text/css" href="stylesly.css">-->
 	<script src="https://kit.fontawesome.com/441701719b.js" crossorigin="anonymous"></script>
@@ -19,15 +19,15 @@
 		<header class="header">
 			<div class="containe logo-nav-conteiner">
 				<div id="hea-nav">
-					<a href="#"class="logo"><img id="logi" src="logo2.jpeg" alt=""></h1></a>
+					<a href="#"class="logo"><img id="logi" src="IMG/index/logo2.jpeg" alt=""></h1></a>
 				</div >
 				<div >
 					<nav class="navigation">
-						<ul class="">
+						<ul>
 							<li> <a href="index.html">Inicio</a></li>
-							<li> <a href="BENJAMIN/INDEX1.html">Servicios</a></li>
-							<li> <a href="Nueva carpeta (2)/proyecto.html">Portafolio</a></li>
-							<li> <a href="jhon/index2.html">Contactos</a></li>
+							<li> <a href="servicios.html">Servicios</a></li>
+							<li> <a href="portafolios.html">Portafolio</a></li>
+							<li> <a href="contactanos.html">Contactos</a></li>
 					</nav>
 				</div>	
 			</div>
@@ -47,7 +47,7 @@
 					</div>
 					<div  class="">	
 						<div class="quien-img">	
-							<img id="logi" src="dmav.gif">	
+							<img id="logi" src="IMG/index/dmav.gif">	
 						</div>
 					</div>
 					
@@ -63,7 +63,7 @@
 				<div class="padre-ofrecemos">
 					<div  >	
 						<div class="ofrecemos-img">	
-							<img src="team.svg">	
+							<img src="IMG/index/team.svg">	
 						</div>
 					</div>
 					<div class="hijo-ofrecemos">
@@ -94,32 +94,32 @@
 					<div class="contenedor-servicios">
 						<div class="hijo-servicios">
 							<h2>Páginas Responsivas</h2>
-							<img id="imagen" src="respon.svg" alt="">
+							<img id="imagen" src="IMG/index/respon.svg" alt="">
 							<p>Paginas adaptables a todo tipo de dispositivo, permitiendo una correcta visualización y una mejor experiencia de usuario.</p>
 						</div>
 						<div class="hijo-servicios">
 							<h2>Desarrollo</h2>
-							<img id="imagen" src="imag3.svg" alt="">
+							<img id="imagen" src="IMG/index/imag3.svg" alt="">
 							<p>Incorporamos las últimas tecnologías para darle vida al diseño y hacerlo
 								versátil y flexible. Se desarrolla el administrador de contenidos, muy amigable, que permite a personas sin experiencia poder controlar y editar el contenido de su sitio web, incluyendo textos y fotos.</p>
 						</div>
 						<div class="hijo-servicios">
 							<h2>Análisis e investigación</h2>
-							<img id="imagen" src="ana.svg" alt=""> 
+							<img id="imagen" src="IMG/index/ana.svg" alt=""> 
 							<p>Gracias a la recopilación y el análisis de la información podemos identificar los objetivos digitales del proyecto y conocer las necesidades de los usuarios.
 
 								Identificamos tus necesidades, entendemos tus objetivos de comunicación y aprendemos acerca de tu negocio.</p>
 						</div>
 						<div  class="hijo-servicios">
 							<h2>Redes Sociales</h2>
-							<img id="imagen" src="redes.svg" alt="">
+							<img id="imagen" src="IMG/index/redes.svg" alt="">
 							<p>Si no estás no existes. 
 								Generamos contenido de valor para tu marca. Buscamos que hablen de ti, que estés en todos
 								lados.</p>
 						</div>
 						<div  class="hijo-servicios">
 							<h2>Testeo</h2>
-							<img id="imagen" src="testeo.svg" alt="">
+							<img id="imagen" src="IMG/index/testeo.svg" alt="">
 							<p>Mientras llevamos a cabo el desarrollo y la programación web, nos encargaremos de revisar todos los puntos clave, a través de un estricto control de calidad que nos permite garantizar el perfecto funcionamiento de la página web antes de ponerla en marcha: codificación, accesibilidad, velocidad de carga, funcionalidad, adaptación a dispositivos móviles y seguridad.</p>
 						</div>
 					</div>
@@ -142,7 +142,7 @@
 							<h1>BENJAMIN</h1>
 							</div>
 							<div>
-							<img  src="benja.jpeg" alt="">
+							<img  src="IMG/index/benja.jpeg" alt="">
 							</div>
 						<div>
 							<p>Muchas personas se vieron afectadas por la pandemia y mas en el sentido economico, pero igualmente intentan resurgir con sus propios negocios, aunque no saben como llegar a otras personas, fue hay donde me incentivo hacer este proyecto para ayudar a esas personas y que su idea de negocio lleguen a mas personas por medio de las redes sociales y la tecnologia.</p>
@@ -151,7 +151,7 @@
 						<div id="wal" class="hijo-personal">
 							<div><h1>WALTER</h1></div>
 							<div>
-							<img  src="walter.jpeg" alt="">
+							<img  src="IMG/index/walter.jpeg" alt="">
 							</div>
 							<div>
 							<p>Sabemos que para ti es muy importante que tu negocio sea atractivo y se adapte a los nuevos retos de este mundo moderno, por eso tendrás nuestro máximo compromiso al trabajar en tu proyecto. 
@@ -163,7 +163,7 @@
 							<h1>JHON</h1>
 							</div>
 							<div>
-							<img  src="jhon.jpeg" alt="">
+							<img  src="IMG/index/jhon.jpeg" alt="">
 							</div>
 							<div>
 							<p>Estamos contigo para apoyarte y asumir retos, darte un empujón para seguir adelante. Nosotros te apoyaremos para cumplir tus metas  y virtualizarte para apoyar en el crecimiento de un empresa.
@@ -175,7 +175,7 @@
 							<h1>JUAN</h1>
 							</div>
 							<div>
-							<img src="juan.jpeg" alt="">
+							<img src="IMG/index/juan.jpeg" alt="">
 							</div>
 							<div>
 							<p>Con dedicación y esfuerzo todo es posible en esta vida, a si que cuenta con DAMV para cumplir tu sueño de tener una página web.
@@ -195,7 +195,7 @@
 				<ul class="slides"> 	
 				  <li class="slide" id="slide1">
 						<div id="contenedor-slide">
-							<img src="animando1.gif" alt="" />
+							<img src="IMG/index/animando1.gif" alt="" />
 							<p class="caption">
 								Estoy muy feliz con el logro obtenido al trabajar con este gran equipo, 
 								aunque muchos de sus miembros son jovenes han demostrado ser capacez de
@@ -205,7 +205,7 @@
 				  </li>
 				  <li class="slide" id="slide2">
 						<div id="contenedor-slide">
-							<img src="animando2.gif" alt="" />
+							<img src="IMG/index/animando2.gif" alt="" />
 							<p class="caption">
 								Trabajar con DAMV fue un placer, ya qu todo no 
 								lo pusieron súper sencillo, cosa que se agradece cuando
@@ -216,7 +216,7 @@
 				  </li>
 				  <li class="slide" id="slide3">
 						<div id="contenedor-slide">
-							<img src="clie1.gif" alt="" />
+							<img src="IMG/index/clie1.gif" alt="" />
 							<p class="caption">
 								DAMV son simplement muy profesionales en lo que hacen, a la par de la 
 								empatia que te demuestran, estoy sinceramente agradecido por el trabajo 
@@ -227,7 +227,7 @@
 	  
 				  <li class="slide" id="slide4">
 					<div id="contenedor-slide">
-					  <img src="clie2.gif" alt="" />
+					  <img src="IMG/index/clie2.gif" alt="" />
 					  <p class="caption">
 						  Nos consideramos muy exigentes, con lo que queriamos
 						  algo diferente y de calidad; son unos genios, los recomendaremos 
@@ -237,7 +237,7 @@
 				  </li>
 				  <li class="slide" id="slide1">
 					<div id="contenedor-slide">
-						<img src="arqui.gif" alt="" />
+						<img src="IMG/index/arqui.gif" alt="" />
 						<p class="caption">
 							Estoy muy feliz con el logro obtenido al trabajar con este gran equipo, 
 							aunque muchos de sus miembros son jovenes han demostrado ser capacez de
@@ -247,7 +247,7 @@
 			  </li>
 			  <li class="slide" id="slide2">
 					<div id="contenedor-slide">
-						<img src="clie1.gif" alt="" />
+						<img src="IMG/index/clie1.gif" alt="" />
 						<p class="caption">
 							Trabajar con DAMV fue un placer, ya qu todo no 
 							lo pusieron súper sencillo, cosa que se agradece cuando
@@ -258,7 +258,7 @@
 			  </li>
 			  <li class="slide" id="slide3">
 					<div id="contenedor-slide">
-						<img src="arqui.gif" alt="" />
+						<img src="IMG/index/arqui.gif" alt="" />
 						<p class="caption">
 							DAMV son simplement muy profesionales en lo que hacen, a la par de la 
 							empatia que te demuestran, estoy sinceramente agradecido por el trabajo 
@@ -269,7 +269,7 @@
   
 			  <li class="slide" id="slide4">
 				<div id="contenedor-slide">
-				  <img src="clie2.gif" alt="" />
+				  <img src="IMG/index/clie2.gif" alt="" />
 				  <p class="caption">
 					  Nos consideramos muy exigentes, con lo que queriamos
 					  algo diferente y de calidad; son unos genios, los recomendaremos 
@@ -305,6 +305,6 @@
 		  </footer>
 		  
 		<!-- FIN FOOTER-->
-	</div>
+
 </body>
 </html>
